Inicia tela cadastro de bandas

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,11 @@ body {
   margin: 0; 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+body .ui-table .ui-table-thead > tr > th {
+  padding: 0.571em 0.857em;
+  border: 1px solid #c8c8c8;
+  font-weight: 700;
+  color: #ffffff;
+  background-color: #3E4E6C;
+}
