--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -8,7 +8,7 @@ ul li {
   display: flex;
   align-items: center;
   background-color: #242E42;
-  color: white;
+  color: #ffffff;
   margin: 0;
 }
 
