--- a/src/styles.css
+++ b/src/styles.css
@@ -22,3 +22,11 @@ body .ui-table .ui-table-thead > tr > th {
   color: #ffffff;
   background-color: #3E4E6C;
 }
+
+body .ui-dialog .ui-dialog-content {
+  background-color: #ffffff;
+  color: #333333;
+  border: 1px solid #c8c8c8;
+  padding: 0.571em 1em;
+  height: 100%;
+}
