--- a/src/app/modules/cadastrar-bandas/cadastro-bandas.component.html
+++ b/src/app/modules/cadastrar-bandas/cadastro-bandas.component.html
@@ -1,16 +1,30 @@
+
+
 <div fxFlex="100%" fxLayout="row wrap" fxLayoutAlign="flex-end" class="actions">
+    
     <div fxFlex="100%" fxLayoutGap="20px" style="padding: 7.5px;">
         <h2>Bandas</h2>
     </div>
 
     <div fxFlex="100%" fxLayout="column" fxLayoutAlign="start" fxLayoutGap="20px"
         style="padding: 7.5px; padding-bottom: 0px;">
-        <p-dialog header="Adicione sua banda favorita" [(visible)]="display"
-            [style]="{width: '1000px', height: '500px'}">
+        <p-dialog appendTo="body" header="Adicione sua banda favorita" [(visible)]="display"
+            [style]="{width: '1000px', height: '500px'}" [modal]="true">
             <div class="container">
                 <div fxFlex="50%" fxLayout="column" fxLayoutAlign="start">
                     <div>
-                        <p-card>TESTE</p-card>
+                        <p-card>
+                            <div style="display: flex;
+                            align-items: center;
+                            justify-content: center;">
+                                <i class="far fa-image fa-10x"></i>
+                            </div>
+                            <div style="display: flex;
+                            align-items: center;
+                            justify-content: center;">
+                                Adicionar imagem
+                            </div> 
+                        </p-card>
                     </div>
                 </div>
                 <div fxFlex="50%" fxLayout="column" fxLayoutAlign="start" fxLayoutGap="7.5px">
@@ -34,18 +48,19 @@
             <div class="buttons-dialog">
                 <div fxFlex="100%" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="7.5px">
                     <div>
-                        <button type="button" (click)="showDialog()" pButton label="Cancelar"></button>
+                        <button type="button" (click)="display=false" pButton label="Cancelar"></button>
                     </div>
                     <div>
-                        <button type="button" (click)="showDialog()" pButton label="Cadastrar"></button>
+                        <button type="button" (click)="display=false" pButton label="Cadastrar"></button>
                     </div>
                 </div>
             </div>
         </p-dialog>
     </div>
 
-    <button type="button" (click)="showDialog()" pButton icon="pi pi-info-circle" label="Adicionar"></button>
-    <div ffxFlex="100%" fxLayoutGap="20px" style="padding: 7.5px;">
+    
+  
+        <button type="button" (click)="showDialog()" pButton icon="pi pi-info-circle" label="Adicionar"></button>
         <p-table [value]="cars">
             <ng-template pTemplate="header">
                 <tr>
@@ -58,5 +73,5 @@
                 </tr>
             </ng-template>
         </p-table>
-    </div>
+  
 </div>
