--- a/src/app/modules/cadastrar-bandas/cadastro-bandas.component.html
+++ b/src/app/modules/cadastrar-bandas/cadastro-bandas.component.html
@@ -1,7 +1,5 @@
-
-
 <div fxFlex="100%" fxLayout="row wrap" fxLayoutAlign="flex-end" class="actions">
-    
+
     <div fxFlex="100%" fxLayoutGap="20px" style="padding: 7.5px;">
         <h2>Bandas</h2>
     </div>
@@ -9,7 +7,7 @@
     <div fxFlex="100%" fxLayout="column" fxLayoutAlign="start" fxLayoutGap="20px"
         style="padding: 7.5px; padding-bottom: 0px;">
         <p-dialog appendTo="body" header="Adicione sua banda favorita" [(visible)]="display"
-            [style]="{width: '1000px', height: '500px'}" [modal]="true">
+            [style]="{width: '1000px', height: '500px'}" [modal]="true" *ngIf="bandas"> 
             <div class="container">
                 <div fxFlex="50%" fxLayout="column" fxLayoutAlign="start">
                     <div>
@@ -23,14 +21,14 @@
                             align-items: center;
                             justify-content: center;">
                                 Adicionar imagem
-                            </div> 
+                            </div>
                         </p-card>
                     </div>
                 </div>
                 <div fxFlex="50%" fxLayout="column" fxLayoutAlign="start" fxLayoutGap="7.5px">
                     <div>
                         <p>Nome da Banda</p>
-                        <input id="input" type="text" size="30" pInputText>
+                        <input id="nmBanda" type="text" size="30" pInputText [(ngModel)]="bandas.nmBanda" >
                     </div>
                     <div>
                         <p>Estilo</p>
@@ -51,27 +49,37 @@
                         <button type="button" (click)="display=false" pButton label="Cancelar"></button>
                     </div>
                     <div>
-                        <button type="button" (click)="display=false" pButton label="Cadastrar"></button>
+                        <button type="button" (click)="adicionarBanda()" pButton label="Cadastrar"></button>
                     </div>
                 </div>
             </div>
         </p-dialog>
     </div>
 
-    
-  
-        <button type="button" (click)="showDialog()" pButton icon="pi pi-info-circle" label="Adicionar"></button>
-        <p-table [value]="cars">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th>Logo</th>
-                    <th>Ranking</th>
-                    <th>Banda</th>
-                    <th>Estilo</th>
-                    <th>Descobrimento</th>
-                    <th>Status</th>
-                </tr>
-            </ng-template>
-        </p-table>
-  
+
+
+    <button type="button" (click)="showDialog()" pButton icon="pi pi-info-circle" label="Adicionar"></button>
+    <p-table [value]="bandas">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Logo</th>
+                <th>Ranking</th>
+                <th>Banda</th>
+                <th>Estilo</th>
+                <th>Descobrimento</th>
+                <th>Status</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-bandas>
+            <tr>
+                <td></td>
+                <td></td>
+                <td>{{bandas.nmBanda}}</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </ng-template>
+    </p-table>
+
 </div>
