--- a/src/app/modules/cadastrar-bandas/cadastro-bandas.component.html
+++ b/src/app/modules/cadastrar-bandas/cadastro-bandas.component.html
@@ -5,61 +5,59 @@
     </div>
 
     <div fxFlex="100%" fxLayout="column" fxLayoutAlign="start" fxLayoutGap="20px"
-        style="padding: 7.5px; padding-bottom: 0px;">
-        <p-dialog appendTo="body" header="Adicione sua banda favorita" [(visible)]="display"
-            [style]="{width: '1000px', height: '500px'}" [modal]="true" *ngIf="bandas"> 
-            <div class="container">
-                <div fxFlex="50%" fxLayout="column" fxLayoutAlign="start">
-                    <div>
-                        <p-card>
-                            <div style="display: flex;
-                            align-items: center;
-                            justify-content: center;">
-                                <i class="far fa-image fa-10x"></i>
-                            </div>
-                            <div style="display: flex;
-                            align-items: center;
-                            justify-content: center;">
-                                Adicionar imagem
-                            </div>
-                        </p-card>
+         style="padding: 7.5px; padding-bottom: 0px;">
+        <p-dialog appendTo="body" header="Adicione sua banda favorita" [(visible)]="mostrar" [style]="{width: '1000px', height: '500px'}" 
+                  [modal]="true">
+            <form [formGroup]="formulario" (ngSubmit)="onFormSubmit(formulario.value)">
+                <div class="container">
+                    <div fxFlex="50%" fxLayout="column" fxLayoutAlign="start">
+                        <div>
+                            <p-card>
+                                <div style="display: flex; align-items: center; justify-content: center;">
+                                    <i class="far fa-image fa-10x"></i>
+                                </div>
+                                <div style="display: flex; align-items: center; justify-content: center;">
+                                    Adicionar imagem
+                                </div>
+                            </p-card>
+                        </div>
+                    </div>
+                    <div fxFlex="50%" fxLayout="column" fxLayoutAlign="start" fxLayoutGap="7.5px">
+                        <div>
+                            <p>Nome da Banda</p>
+                            <input formControlName="nmBanda" type="text" size="30" pInputText>
+                        </div>
+                        <div>
+                            <p>Ranking</p>
+                            <p-dropdown formControlName="tpRanking" [optionLabel]="label" [options]="ranking" placeholder="Selecione um ranking"></p-dropdown>
+
+                        </div>
+                        <div>
+                            <p>Estilo</p>
+                            <input formControlName="nmEstilo" type="text" size="30" pInputText>
+                        </div>
+                        <div>
+                            <p>Descobrimento</p>
+                            <p-calendar formControlName="dtDescobrimento" dateFormat="dd/mm/yy" [yearNavigator]="true" yearRange="2000:2030"></p-calendar>
+                        </div>
                     </div>
                 </div>
-                <div fxFlex="50%" fxLayout="column" fxLayoutAlign="start" fxLayoutGap="7.5px">
-                    <div>
-                        <p>Nome da Banda</p>
-                        <input id="nmBanda" type="text" size="30" pInputText [(ngModel)]="bandas.nmBanda" >
-                    </div>
-                    <div>
-                        <p>Estilo</p>
-                        <input id="input" type="text" size="30" pInputText>
-                    </div>
-                    <div>
-                        <p>Descobrimento</p>
-                        <input id="input" type="text" size="30" pInputText>
-                    </div>
-                    <div>
-                        <p-checkbox [(ngModel)]="value" [binary]="true" label="Ativa"></p-checkbox>
+                <div class="buttons-dialog">
+                    <div fxFlex="100%" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="7.5px">
+                        <div>
+                            <button type="button" (click)="mostrar=false" pButton label="Cancelar"></button>
+                        </div>
+                        <div>
+                            <button type="submit" pButton label="Cadastrar" [disabled]="!formulario.valid"></button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="buttons-dialog">
-                <div fxFlex="100%" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="7.5px">
-                    <div>
-                        <button type="button" (click)="display=false" pButton label="Cancelar"></button>
-                    </div>
-                    <div>
-                        <button type="button" (click)="adicionarBanda()" pButton label="Cadastrar"></button>
-                    </div>
-                </div>
-            </div>
+            </form>
         </p-dialog>
     </div>
 
-
-
-    <button type="button" (click)="showDialog()" pButton icon="pi pi-info-circle" label="Adicionar"></button>
-    <p-table [value]="bandas">
+    <button type="button" (click)="mostrarDialogo()" pButton icon="pi pi-info-circle" label="Adicionar"></button>
+    <p-table [value]="bandas" [paginator]="true" [rows]="20">
         <ng-template pTemplate="header">
             <tr>
                 <th>Logo</th>
@@ -67,19 +65,16 @@
                 <th>Banda</th>
                 <th>Estilo</th>
                 <th>Descobrimento</th>
-                <th>Status</th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-bandas>
             <tr>
                 <td></td>
-                <td></td>
+                <td>{{bandas.tpRanking}}</td>
                 <td>{{bandas.nmBanda}}</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>{{bandas.nmEstilo}}</td>
+                <td>{{bandas.dtDescobrimento}}</td>
             </tr>
         </ng-template>
     </p-table>
-
 </div>
