Implementa tela bandas favoritas e filtragem

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <mat-nav-list clas="sidebar">
 
     <div class="profile-card">
-        <img src="/assets/imgs/yato.png" alt="Soufiane FADIL">
+        <img src="/assets/imgs/yato.png" alt="">
         <div class="header">
             <h2>Bruno Mattge</h2>
             <h4>brmattge@gmail.com</h4>
