--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
     <mat-divider></mat-divider>
 
     <a mat-list-item routerLinkActive="list-item-active" routerLink="/">
-        Favoritos
+        Favoritas
         <mat-icon>star</mat-icon>
     </a>
 
